--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="hero-image">
-        <img src="assets/me.png" alt="Mooeayz">
+        <img src="me.png" alt="Mooeayz">
       </div>
     </div>
   </section>
@@ -118,7 +118,7 @@
 
     <!-- Right column -->
     <div class="about-visual">
-      <img src="assets/about image.png" alt="About image" class="about-image">
+      <img src="about image.png" alt="About image" class="about-image">
       <div class="about-illustration">
         <!-- Abstract illustration (can swap with image if needed) -->
         <div class="shape shape1"></div>
@@ -188,7 +188,7 @@
     <div class="projects-grid grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
       <!-- Project 1 -->
 <div class="project-card bg-[#111] text-white rounded-xl shadow-lg overflow-hidden hover:scale-105 transition-transform duration-300">
-  <img src="assets/project1.png" alt="Project 1" class="w-full h-56 object-cover">
+  <img src="project1.png" alt="Project 1" class="w-full h-56 object-cover">
   <div class="project-info p-6">
     <h3 class="text-xl font-semibold mb-2 bg-gradient-to-r from-orange-500 to-orange-400 bg-clip-text text-transparent">
       Yamhq
@@ -204,7 +204,7 @@
 
 <!-- Project 2 -->
 <div class="project-card bg-[#111] text-white rounded-xl shadow-lg overflow-hidden hover:scale-105 transition-transform duration-300">
-  <img src="assets/project2.png" alt="Project 2" class="w-full h-56 object-cover">
+  <img src="project2.png" alt="Project 2" class="w-full h-56 object-cover">
   <div class="project-info p-6">
     <h3 class="text-xl font-semibold mb-2 bg-gradient-to-r from-orange-500 to-orange-400 bg-clip-text text-transparent">
       Tradevision
@@ -220,7 +220,7 @@
 
 <!-- Project 3 -->
 <div class="project-card bg-[#111] text-white rounded-xl shadow-lg overflow-hidden hover:scale-105 transition-transform duration-300">
-  <img src="assets/project3.png" alt="Project 3" class="w-full h-56 object-cover">
+  <img src="project3.png" alt="Project 3" class="w-full h-56 object-cover">
   <div class="project-info p-6">
     <h3 class="text-xl font-semibold mb-2 bg-gradient-to-r from-orange-500 to-orange-400 bg-clip-text text-transparent">
       GMP Farms
@@ -236,7 +236,7 @@
 
 <!-- Project 4 -->
 <div class="project-card bg-[#111] text-white rounded-xl shadow-lg overflow-hidden hover:scale-105 transition-transform duration-300">
-  <img src="assets/project4.png" alt="Project 4" class="w-full h-56 object-cover">
+  <img src="project4.png" alt="Project 4" class="w-full h-56 object-cover">
   <div class="project-info p-6">
     <h3 class="text-xl font-semibold mb-2 bg-gradient-to-r from-orange-500 to-orange-400 bg-clip-text text-transparent">
       Emivon AI
